# neuro-trail

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  learning_canvas.py  main.py  pyproject.toml  requirements.txt  user_memory.py  vector_store.py
.github/workflows/: build.yml  release.yml
.streamlit/: config.toml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/api/v1/: chat.py  config.py  documents.py  health.py  router.py  templates.py  user_preferences.py
backend/app/core/: config.py  exceptions.py  logging.py  plugin_base.py
backend/app/crud/: __init__.py  base.py  chat.py  document.py  template.py  user.py
backend/app/db/: base_class.py  session.py
backend/app/models/: chat.py  config.py  document.py  template.py  user.py
backend/app/plugins/: __init__.py
backend/app/plugins/document_handlers/: __init__.py  docx_handler.py  epub_handler.py  pdf_handler.py
backend/app/plugins/embedding_providers/: __init__.py  ollama.py
backend/app/plugins/knowledge_graphs/: __init__.py  neo4j_documents.py
backend/app/plugins/llm_providers/: ollama.py
backend/app/plugins/vector_stores/: __init__.py  chroma.py
backend/app/schemas/: base.py  chat.py  config.py  document.py  error.py  template.py  user.py
backend/app/services/: chat_service.py  config_service.py  document_service.py  plugin_manager.py  template_service.py  user_service.py
backend/app/utils/: file_utils.py  text_utils.py
config/: neo4j.conf
frontend/: Dockerfile  pyproject.toml
frontend/streamlit/: app.py
notebooks/: multiagent-orchestration.ipynb  neo4j_knowledge_graph_pipeline.ipynb
scripts/: ollama_entrypoint.sh
src/: Configuration.py  app.py  main.py
src-bak/: Configuration.py
src-bak/core/: config_manager.py
src-bak/epub_extract/: __init__.py  epub_extract.py
src-bak/rag/: __init__.py  embedding_service.py  vector_store_factory.py  vector_store_service.py
src-bak/user_memory/: user_memory.py
src/core/: __init__.py  config_manager.py  learning_canvas.py  prompt_templates.py  settings.py  settings_config.py
src/embeddings/: base.py  ollama_base.py  sentence_transformer_base.py
src/enums/: __init__.py  models.py
src/epub_extract/: __init__.py  epub_extract.py
src/knowledge_graph/: knowledge_graph.py
src/learning_canvas/: __init__.py  learning_canvas.py
src/llm/: __init__.py  llm.py
src/memory/: __init__.py  memory_augmented_chat.py  memory_client.py  user_memory.py
src/pages/: 1_Personalization.py  2_Chat.py
src/rag/: __init__.py  base_vector_store.py  chroma_vector_store.py  embedding_service.py  rag.py  vector_store.py  vector_store_factory.py  vector_store_service.py
src/ui/components/: __init__.py  chat.py  configuration.py  personalization.py  prompt_templates.py  sidebar.py
src/user_memory/: __init__.py  user_memory.py
src/v2/: test.py  ui.py
src/v2/core/: settings_config.py
src/v2/extractors/: epub_extract.py
src/v2/interfaces/: base.py
src/v2/rag/: embedding_service.py
src/v2/retriever/: base.py
src/vector_store/: vector_store.py
