[project]
name = "neuro-trail"
version = "0.1.0"
description = "Personalized Memory Augmented Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.18",
    "faiss-cpu>=1.10.0",
    "neo4j>=5.28.1",
    "numpy>=2.2.3",
    "redis>=5.2.1",
    "ollama>=0.4.7",
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "sentence-transformers>=3.4.1",
]

[project.packages]
find = {where = ["src"]}

[tool.uv.workspace]
members = ["venv"]

[tool.ruff]
lint.select = [ "E", "F", "I", "TID251" ]
lint.ignore = [ "E501" ]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
