[project]
name = "neuro-trail"
version = "0.1.0"
description = "Personalized Memory Augmented Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "streamlit>=1.42.2",
    "ruff>=0.9.7",
]

[project.packages]
find = { where = ["src"] }

[tool.uv.workspace]
members = ["venv"]

[tool.ruff]
lint.select = ["E", "F", "I", "TID251"]
lint.ignore = ["E501"]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
